服务器上的路径问题

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/zuoyekong/index.html">产品</a></li>
-                <li><a href="/zuoyekong/community.html">社区</a></li>
+                <li class="active"><a href="/">产品</a></li>
+                <li><a href="/community.html">社区</a></li>
               </ul>
             </div>
           </div>
