--- a/community.html
+++ b/community.html
@@ -44,8 +44,8 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li ><a href="/zuoyekong/index.html">产品</a></li>
-                <li class="active"><a href="/zuoyekong/community.html">社区</a></li>
+                <li ><a href="/">产品</a></li>
+                <li class="active"><a href="/community.html">社区</a></li>
               </ul>
             </div>
           </div>
